dev/test_programs/INVALID/group1/stmt16.go
package main;

func main(){
	var x int;
	var y int;
	var z int;
	x = 4;
	y = 3;
	z = 2;
	if y < x, z < y {
		print ("test");
	} 
}
